apply code review suggestions

--- a/docs/backend-requests/making/custom-session-token.mdx
+++ b/docs/backend-requests/making/custom-session-token.mdx
@@ -37,7 +37,7 @@ alt="Clerk Dashboard showing the custom claim modal"
 
 ### Use the custom claims in your application
 
-The `Auth` object in the `@clerk/nextjs` package includes a `sessionClaims` property that contains the custom claims you added to your session token.
+The [`Auth`](/docs/references/nextjs/auth-object) object in the `@clerk/nextjs` package includes a `sessionClaims` property that contains the custom claims you added to your session token.
 
 Access the custom claims in your application by calling `auth()` in App Router applications or `getAuth(req)` in Pages Router applications.
 
@@ -77,7 +77,7 @@ export default async function handler(req: NextApiRequest, res: NextApiResponse)
 
 ### Add global TypeScript type for custom session claims
 
-To get auto-complete and prevent TypeScript errors when working with custom session claims, you can add a global TypeScript type for custom session claims.
+To get auto-complete and prevent TypeScript errors when working with custom session claims, you can define a global type.
 
 1. In your application's root folder, add a `types` directory.
 2. Inside of the `types` directory, add a `globals.d.ts` file.
