--- a/docs/references/javascript/clerk/sign-in.mdx
+++ b/docs/references/javascript/clerk/sign-in.mdx
@@ -1,9 +1,13 @@
 ---
-title: <SignIn /> component
-description: This reference describes the properties and methods related to Clerk's <SignIn /> component for a JavaScript application.
+title: JavaScript <SignIn />
+description: This JavaScript reference describes the properties and methods related to Clerk's <SignIn /> component.
 ---
 
-# `<SignIn />` component
+# JavaScript `<SignIn />`
+
+<Callout type="warning">
+  This JavaScript reference describes the properties and methods related to Clerk's `<SignIn />` component. If you are looking for the React component, see the [`<SignIn />`](/docs/components/authentication/sign-in) documentation.
+</Callout>
 
 <Images width={496} height={564} src="/docs/images/ui-components/component-sign_in.svg" alt="Sign in component example" />
 
