--- a/docs/references/javascript/clerk/sign-up.mdx
+++ b/docs/references/javascript/clerk/sign-up.mdx
@@ -1,13 +1,17 @@
 ---
-title: <SignUp /> component
-description: The <SignUp /> component renders a UI for signing up users. The functionality of the <SignUp /> component are controlled by the instance settings you specify in your Clerk Dashboard. You can further customize your SignUp component by passing additional properties at the time of rendering.
+title: JavaScript <SignUp />
+description: This JavaScript reference describes the properties and methods related to Clerk's <SignUp /> component.
 ---
 
-# `<SignUp />` component
+# JavaScript `<SignUp />`
+
+<Callout type="warning">
+  This JavaScript reference describes the properties and methods related to Clerk's `<SignUp />` component. If you are looking for the React component, see the [`<SignUp />`](/docs/components/authentication/sign-up) documentation.
+</Callout>
 
 <Images width={496} height={780} src="/docs/images/ui-components/component-sign_up.svg" alt="Sign up component example" />
 
-The [`<SignUp />`][signup-ref] component renders a UI for signing up users. The functionality of the [`<SignUp />`][signup-ref] component are controlled by the instance settings you specify in your [Clerk Dashboard](https://dashboard.clerk.com), such as [sign-up options](/docs/authentication/configuration/sign-up-options) and [social connections](/docs/authentication/social-connections/overview). You can further customize your [`<SignUp />`][signup-ref] component by passing additional properties at the time of rendering.
+The [`<SignUp />`](/docs/components/authentication/sign-up) component renders a UI for signing up users. The functionality of the `<SignUp />` component are controlled by the instance settings you specify in your [Clerk Dashboard](https://dashboard.clerk.com), such as [sign-up options](/docs/authentication/configuration/sign-up-options) and [social connections](/docs/authentication/social-connections/overview). You can further customize your `<SignUp />` component by passing additional properties at the time of rendering.
 
 The following methods available on an instance of the [`Clerk`](/docs/references/javascript/clerk/clerk) class are used to render and control the `<SignUp />` component:
 
@@ -18,7 +22,7 @@ The following methods available on an instance of the [`Clerk`](/docs/references
 
 ## `mountSignUp()`
 
-Render the [`<SignUp />`][signup-ref] component to an HTML `<div>` element.
+Render the `<SignUp />` component to an HTML `<div>` element.
 
 ```typescript
 function mountSignUp(node: HTMLDivElement, props?: SignUpProps): void;
@@ -30,20 +34,6 @@ function mountSignUp(node: HTMLDivElement, props?: SignUpProps): void;
 | --- | --- | --- |
 | `node ` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The `<div>` element used to render in the `<SignUp />` component |
 | `props?` | [`SignUpProps`](#sign-up-props) | The properties to pass to the `<SignUp />` component. |
-
-#### `SignUpProps`
-
-The type of the `props` parameter in the `mountSignUp()` function is defined as follows:
-
-| Name | Type | Description |
-| --- | --- | --- |
-| `routing` | `'hash' \| 'path' \| 'virtual'` | The routing strategy for your pages.<br />Note: If you are using environment variables for Next.js or Remix to specify your routes, this will be set to `path`. |
-| `path` | `string` | The path where the component is mounted on when path-based routing is used.<br />`/sign-in`<br />This prop is ignored in hash- and virtual-based routing. |
-| `redirectUrl` | `string` | Full URL or path to navigate after successful sign in or sign up.<br /> The same as setting `afterSignInUrl` and `afterSignUpUrl` to the same value. |
-| `afterSignInUrl` | `string` | The full URL or path to navigate after a successful sign in. Defaults to `/`. |
-| `signInUrl` | `string` | Full URL or path to the sign in page. Use this property to provide the target of the 'Sign In' link that's rendered. |
-| `afterSignUpUrl` | `string` | The full URL or path to navigate after a successful sign up. Defaults to `/`. |
-| `initialValues` | [`SignUpInitialValues`](/docs/references/javascript/types/sign-up-initial-values) | The values used to prefill the sign-up fields with. |
 
 ### `mountSignUp()` usage
 
@@ -88,7 +78,7 @@ The type of the `props` parameter in the `mountSignUp()` function is defined as 
 
 ## `unmountSignUp()`
 
-Unmount and run cleanup on an existing [`<SignUp />`][signup-ref] component instance.
+Unmount and run cleanup on an existing `<SignUp />` component instance.
 
 ```typescript
 function unmountSignUp(node: HTMLDivElement): void;
@@ -98,7 +88,7 @@ function unmountSignUp(node: HTMLDivElement): void;
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `node ` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The container `<div>` element with a rendered [`<SignUp />`][signup-ref] component instance |
+| `node ` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The container `<div>` element with a rendered `<SignUp />` component instance |
 
 ### `unmountSignUp()` usage
 
@@ -151,7 +141,7 @@ function unmountSignUp(node: HTMLDivElement): void;
 
 ## `openSignUp()`
 
-Opens the [`<SignUp />`][signup-ref] component as an overlay at the root of your HTML `body` element.
+Opens the `<SignUp />` component as an overlay at the root of your HTML `body` element.
 
 ```typescript
 function openSignUp(props?: SignUpProps): void;
@@ -161,7 +151,7 @@ function openSignUp(props?: SignUpProps): void;
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `props?` | [`SignUpProps`](#sign-up-props) | The properties to pass to the [`<SignUp />`][signup-ref] component |
+| `props?` | [`SignUpProps`](#sign-up-props) | The properties to pass to the `<SignUp />` component |
 
 ### `openSignUp()` usage
 
@@ -235,4 +225,16 @@ function closeSignUp(): void;
 
 </InjectKeys>
 
-[signup-ref]: /docs/components/authentication/sign-up
+#### `SignUpProps`
+
+All props below are optional.
+
+| Name | Type | Description |
+| --- | --- | --- |
+| `routing` | `'hash' \| 'path' \| 'virtual'` | The routing strategy for your pages.<br />Note: If you are using environment variables for Next.js or Remix to specify your routes, this will be set to `path`. |
+| `path` | `string` | The path where the component is mounted on when path-based routing is used.<br />`/sign-in`<br />This prop is ignored in hash- and virtual-based routing. |
+| `redirectUrl` | `string` | Full URL or path to navigate after successful sign in or sign up.<br /> The same as setting `afterSignInUrl` and `afterSignUpUrl` to the same value. |
+| `afterSignInUrl` | `string` | The full URL or path to navigate after a successful sign in. Defaults to `/`. |
+| `signInUrl` | `string` | Full URL or path to the sign in page. Use this property to provide the target of the 'Sign In' link that's rendered. |
+| `afterSignUpUrl` | `string` | The full URL or path to navigate after a successful sign up. Defaults to `/`. |
+| `initialValues` | [`SignUpInitialValues`](/docs/references/javascript/types/sign-up-initial-values) | The values used to prefill the sign-up fields with. |
