--- a/docs/references/javascript/clerk/sign-in.mdx
+++ b/docs/references/javascript/clerk/sign-in.mdx
@@ -59,7 +59,7 @@ In the example below, the `<SignIn />` component is rendered to a `<div>` elemen
   clerk.mountSignIn(signInDiv);
   ```
 
-  ```html filename="index.html" {10}
+  ```html filename="index.html" {11}
   <!-- Add a <div id="sign-in"> element to your HTML -->
   <div id="sign-in"></div>
 
@@ -129,7 +129,7 @@ function unmountSignIn(node: HTMLDivElement): void;
       const signInDiv =
         document.getElementById('sign-in');
 
-     Clerk.mountSignIn(signInDiv);
+      Clerk.mountSignIn(signInDiv);
 
       // ...
 
@@ -154,20 +154,6 @@ function openSignIn(props?: SignInProps): void;
 | Name | Type | Desciption |
 | --- | --- | --- |
 | `props?` | [`SignInProps`](#sign-in-props) | The properties to pass to the `<SignIn />` component |
-
-#### `SignInProps`
-
-The type of the `props` parameter in the `openSignIn()` method is defined as follows:
-
-| Name | Type | Description |
-| --- | --- | --- |
-| `routing` | `'hash' \| 'path' \| 'virtual'` | The routing strategy for your pages. Defaults to `'path'`. |
-| `path` | `string` | The path where the component is mounted on when path-based routing is used.<br />For example, `/sign-in`<br />This prop is ignored in hash- and virtual-based routing. |
-| `redirectUrl` | `string` | Full URL or path to navigate after successful sign in or sign up.<br />The same as setting `afterSignInUrl` and `afterSignUpUrl` to the same value. |
-| `afterSignInUrl` | `string` | The full URL or path to navigate after a successful sign in. Defaults to `/`. |
-| `signUpUrl` | `string` | Full URL or path to the sign up page. Use this property to provide the target of the 'Sign Up' link that's rendered. |
-| `afterSignUpUrl` | `string` | The full URL or path to navigate after a successful sign up. Defaults to `/`. |
-| `initialValues` | [`SignInInitialValues`](/docs/references/javascript/types/sign-in-initial-values) | The values used to prefill the sign-in fields with. |
 
 ### `openSignIn()` usage
 
@@ -224,7 +210,7 @@ function closeSignIn(): void;
   clerk.closeSignIn();
   ```
 
-  ```html filename="index.html" {8}
+  ```html filename="index.html" {9}
   <script>
     window.addEventListener("load", async function () {
       await Clerk.load();
@@ -240,3 +226,17 @@ function closeSignIn(): void;
 </CodeBlockTabs>
 
 </InjectKeys>
+
+## `SignInProps`
+
+The type of the `props` parameter in the `openSignIn()` method is defined as follows:
+
+| Name | Type | Description |
+| --- | --- | --- |
+| `routing` | `'hash' \| 'path' \| 'virtual'` | The routing strategy for your pages. Defaults to `'path'`. |
+| `path` | `string` | The path where the component is mounted on when path-based routing is used.<br />For example, `/sign-in`<br />This prop is ignored in hash- and virtual-based routing. |
+| `redirectUrl` | `string` | Full URL or path to navigate after successful sign in or sign up.<br />The same as setting `afterSignInUrl` and `afterSignUpUrl` to the same value. |
+| `afterSignInUrl` | `string` | The full URL or path to navigate after a successful sign in. Defaults to `/`. |
+| `signUpUrl` | `string` | Full URL or path to the sign up page. Use this property to provide the target of the 'Sign Up' link that's rendered. |
+| `afterSignUpUrl` | `string` | The full URL or path to navigate after a successful sign up. Defaults to `/`. |
+| `initialValues` | [`SignInInitialValues`](/docs/references/javascript/types/sign-in-initial-values) | The values used to prefill the sign-in fields with. |
