--- a/docs/references/javascript/clerk/sign-up.mdx
+++ b/docs/references/javascript/clerk/sign-up.mdx
@@ -168,7 +168,7 @@ function openSignUp(props?: SignUpProps): void;
   clerk.openSignUp();
   ```
 
-  ```html filename="index.html" {4}
+  ```html filename="index.html" {5}
   <script>
     window.addEventListener("load", async function () {
       await Clerk.load();
@@ -208,7 +208,7 @@ function closeSignUp(): void;
   clerk.closeSignUp();
   ```
 
-  ```html filename="index.html" {8}
+  ```html filename="index.html" {9}
   <script>
     window.addEventListener("load", async function () {
       await Clerk.load();
@@ -225,7 +225,7 @@ function closeSignUp(): void;
 
 </InjectKeys>
 
-#### `SignUpProps`
+## `SignUpProps`
 
 All props below are optional.
 
