update JS userbutton userprofile references

--- a/docs/references/javascript/clerk/user-button.mdx
+++ b/docs/references/javascript/clerk/user-button.mdx
@@ -1,140 +1,141 @@
 ---
-title: <UserButton /> component
-description: The <UserButton /> component is used to render the familiar user button UI popularized by Google.
+title: JavaScript <UserButton />
+description: This JavaScript reference describes the properties and methods related to Clerk's <UserButton /> component.
 ---
 
-# `<UserButton />` component
+# JavaScript `<UserButton />`
+
+<Callout type="warning">
+  This JavaScript reference describes the properties and methods related to Clerk's `<UserButton />` component. If you are looking for the React component, see the [`<UserButton />`](/docs/components/user/user-button) documentation.
+</Callout>
 
 <Images width={496} height={564} src="/docs/images/ui-components/component-user_button.svg" alt="User Button Example" />
 
-The [`<UserButton />`][userbutton-ref] component is used to render the familiar user button UI popularized by Google.
+The [`<UserButton />`](/docs/components/user/user-button) component is used to render the familiar user button UI popularized by Google.
+
+The following methods available on an instance of the [`Clerk`](/docs/references/javascript/clerk/clerk) class are used to render and control the `<UserButton />` component:
+
+- [`mountUserButton()`](#mount-user-button)
+- [`unmountUserButton()`](#unmount-user-button)
 
 ## `mountUserButton()`
 
-Render the [`<UserButton />`][userbutton-ref] component to an HTML `<div>` element.
-
-### Usage
-
-<CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
-  ```typescript {15-19}
-  import Clerk from '@clerk/clerk-js';
-  import { dark } from "@clerk/themes";
-
-  document.querySelector<HTMLDivElement>('#app')!.innerHTML = `
-    <div
-      id="user-button"
-    ></div>
-  `;
-
-  const userButtonComponent = document.querySelector<HTMLDivElement>('#user-button')!;
-
-  const clerk = new Clerk('pk_[publishable_key]');
-  await clerk.load();
-
-  clerk.mountUserButton(userButtonComponent, {
-    appearance: {
-      baseTheme: dark
-    }
-  });
-  ```
-
-  ```html {13-17}
-  <div id="user-button"></div>
-  <script>
-    const script = document.createElement('script');
-    script.setAttribute('data-clerk-publishable-key', 'pk_[publishable_key]');
-    script.async = true;
-    script.src = `https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js`;
-
-    script.addEventListener('load', async function () {
-      await window.Clerk.load();
-
-      const userButtonComponent = document.querySelector('#user-button');
-
-      window.Clerk.mountUserButton(userButtonComponent, {
-        appearance: {
-          baseTheme: dark
-        }
-      });
-    });
-    document.body.appendChild(script);
-  </script>
-  ```
-</CodeBlockTabs>
-
-### Properties
+Render the `<UserButton />` component to an HTML `<div>` element.
 
 ```typescript
 function mountUserButton(node: HTMLDivElement, props?: UserButtonProps): void;
 ```
 
+### `mountUserButton()` params
+
 | Name | Type | Description |
 | --- | --- | --- |
-| `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The `<div>` element used to render in the [`<UserButton />`][userbutton-ref] component |
-| `props?` | [`UserButtonProps`](#user-button-props) | The properties to pass to the [`<UserButton />`][userbutton-ref] component |
+| `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The `<div>` element used to render in the `<UserButton />` component |
+| `props?` | [`UserButtonProps`](#user-button-props) | The properties to pass to the `<UserButton />` component |
 
-## `unmountUserButton()`
+### `mountUserButton()` usage
 
-Unmount and run cleanup on an existing [`<UserButton />`][userbutton-ref] component instance.
+<InjectKeys>
 
-### Usage
-
-<CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
-  ```typescript {19}
+<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
+  ```js filename="main.js" {14}
   import Clerk from '@clerk/clerk-js';
 
-  document.querySelector<HTMLDivElement>('#app')!.innerHTML = `
-    <div
-      id="user-button"
-    ></div>
-  `
-
-  const userButtonComponent = document.querySelector<HTMLDivElement>('#user-button')!;
-
-  const clerk = new Clerk('pk_[publishable_key]');
-
+  // Initialize Clerk with your Clerk publishable key
+  const clerk = new Clerk('{{pub_key}}');
   await clerk.load();
 
-  clerk.mountUserButton(userButtonComponent);
+  document.getElementById("app").innerHTML = `
+    <div id="user-button"></div>
+  `;
 
-  // ...
+  const userbuttonDiv =
+    document.getElementById("user-button");
 
-  clerk.unmountUserButton(userButtonComponent);
+  clerk.mountUserButton(userbuttonDiv);
   ```
 
-  ```html {17}
+  ```html filename="index.html" {11}
+  <!-- Add a <div id="user-button"> element to your HTML -->
   <div id="user-button"></div>
+
   <script>
-    const script = document.createElement('script');
-    script.setAttribute('data-clerk-publishable-key', 'pk_[publishable_key]');
-    script.async = true;
-    script.src = `https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js`;
+    window.addEventListener("load", async function () {
+      await Clerk.load();
 
-    script.addEventListener('load', async function () {
-      await window.Clerk.load();
+      const userbuttonDiv =
+        document.getElementById('user-button');
 
-      const userButtonComponent = document.querySelector('#user-button');
-
-      window.Clerk.mountUserButton(userButtonComponent);
-
-      // ...
-
-      window.Clerk.unmountUserButton(userButtonComponent);
+      Clerk.mountUserButton(userbuttonDiv);
     });
-    document.body.appendChild(script);
   </script>
   ```
 </CodeBlockTabs>
 
-### Properties
+</InjectKeys>
+
+## `unmountUserButton()`
+
+Unmount and run cleanup on an existing `<UserButton />` component instance.
 
 ```typescript
 function unmountUserButton(node: HTMLDivElement): void;
 ```
 
+### `unmountUserButton()` params
+
 | Name | Type | Description |
 | --- | --- | --- |
-| `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The container `<div>` element with a rendered [`<UserButton />`][userbutton-ref] component instance. |
+| `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The container `<div>` element with a rendered `<UserButton />` component instance. |
+
+### `unmountUserButton()` usage
+
+<InjectKeys>
+
+<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
+  ```js filename="main.js" {18}
+  import Clerk from '@clerk/clerk-js';
+
+  // Initialize Clerk with your Clerk publishable key
+  const clerk = new Clerk('{{pub_key}}');
+  await clerk.load();
+
+  document.getElementById('app').innerHTML = `
+    <div id="user-button"></div>
+  `
+
+  const userButtonDiv =
+    document.getElementById('user-button');
+
+  clerk.mountUserButton(userButtonDiv);
+
+  // ...
+
+  clerk.unmountUserButton(userButtonDiv);
+  ```
+
+  ```html filename="index.html" {15}
+  <!-- Add a <div id="user-button"> element to your HTML -->
+  <div id="user-button"></div>
+
+  <script>
+    window.addEventListener("load", async function () {
+      await Clerk.load();
+
+      const userButtonDiv =
+        document.getElementById('user-button');
+
+      Clerk.mountUserButton(userButtonDiv);
+
+      // ...
+
+      Clerk.unmountUserButton(userButtonDiv);
+    });
+  </script>
+  ```
+</CodeBlockTabs>
+
+</InjectKeys>
 
 ## `UserButtonProps`
 
@@ -153,7 +154,6 @@ All props below are optional.
 | `defaultOpen` | `boolean` | Controls whether the `<UserButton />` should open by default during the first render. |
 | `userProfileProps` | `object` | Specify options for the underlying [`<UserProfile />`][userprofile-ref] component.<br/>For example, `{additionalOAuthScopes: {google: ['foo', 'bar'], github: ['qux']}}`. |
 
-[userbutton-ref]: /docs/components/user/user-button
 [userprofile-ref]: /docs/components/user/user-profile
 [components-ref]: /docs/components/overview
 [ap-ref]: /docs/account-portal/overview
