--- a/docs/references/javascript/clerk/user-profile.mdx
+++ b/docs/references/javascript/clerk/user-profile.mdx
@@ -1,351 +1,353 @@
 ---
-title: <UserProfile /> component
-description: The <UserProfile /> component is used to render a beautiful, full-featured account management UI that allows users to manage their profile and security settings.
+title: JavaScript <UserProfile />
+description: This JavaScript reference describes the properties and methods related to Clerk's <UserProfile /> component.
 ---
 
-# `<UserProfile />` component
+# JavaScript `<UserProfile />`
+
+<Callout type="warning">
+  This JavaScript reference describes the properties and methods related to Clerk's `<UserProfile />` component. If you are looking for the React component, see the [`<UserProfile />`](/docs/components/user/user-profile) documentation.
+</Callout>
 
 <Images width={976} height={762} src="/docs/images/ui-components/component-user_profile.svg" alt="User Profile example" />
 
-The [`<UserProfile />`][userprofile-ref] component is used to render a beautiful, full-featured account management UI that allows users to manage their profile and security settings.
+The [`<UserProfile />`](/docs/components/user/user-profile) component is used to render a beautiful, full-featured account management UI that allows users to manage their profile and security settings.
+
+The following methods available on an instance of the [`Clerk`](/docs/references/javascript/clerk/clerk) class are used to render and control the `<UserProfile />` component:
+
+- [`mountUserProfile()`](#mount-user-profile)
+- [`unmountUserProfile()`](#unmount-user-profile)
+- [`openUserProfile()`](#open-user-profile)
+- [`closeUserProfile()`](#close-user-profile)
 
 ## `mountUserProfile()`
 
-Render the [`<UserProfile />`][userprofile-ref] component to an HTML `<div>` element.
-
-### Usage
-
-<CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
-  ```typescript {15-19}
-  import Clerk from '@clerk/clerk-js';
-  import { dark } from "@clerk/themes";
-
-  document.querySelector<HTMLDivElement>('#app')!.innerHTML = `
-    <div
-      id="user-profile"
-    ></div>
-  `;
-
-  const userProfileComponent = document.querySelector<HTMLDivElement>('#user-profile')!;
-
-  const clerk = new Clerk('pk_[publishable_key]');
-  await clerk.load();
-
-  clerk.mountUserProfile(userProfileComponent, {
-    appearance: {
-      baseTheme: dark
-    }
-  });
-  ```
-
-  ```html {13-17}
-  <div id="user-profile"></div>
-  <script>
-    const script = document.createElement('script');
-    script.setAttribute('data-clerk-publishable-key', 'pk_[publishable_key]');
-    script.async = true;
-    script.src = `https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js`;
-
-    script.addEventListener('load', async function () {
-      await window.Clerk.load();
-
-      const userProfileComponent = document.querySelector('#user-profile');
-
-      window.Clerk.mountUserProfile(userProfileComponent, {
-        appearance: {
-          baseTheme: dark
-        }
-      });
-    });
-    document.body.appendChild(script);
-  </script>
-  ```
-</CodeBlockTabs>
-
-### Properties
+Render the `<UserProfile />` component to an HTML `<div>` element.
 
 ```typescript
 function mountUserProfile(node: HTMLDivElement, props?: UserProfileProps): void;
 ```
 
+### `mountUserProfile()` params
+
 | Name | Type | Description |
 | --- | --- | --- |
-| `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The `<div>` element used to render in the [`<UserProfile />`][userprofile-ref] component |
-| `props?` | [`UserProfileProps`](#user-profile-props) | The properties to pass to the [`<UserProfile />`][userprofile-ref] component |
+| `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The `<div>` element used to render in the `<UserProfile />` component |
+| `props?` | [`UserProfileProps`](#user-profile-props) | The properties to pass to the `<UserProfile />` component |
 
-## `unmountUserProfile()`
+### `mountUserProfile()` usage
 
-Unmount and run cleanup on an existing [`<UserProfile />`][userprofile-ref] component instance.
+<InjectKeys>
 
-### Usage
-
-<CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
-  ```typescript {19}
+<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
+  ```js filename="main.js" {14}
   import Clerk from '@clerk/clerk-js';
 
-  document.querySelector<HTMLDivElement>('#app')!.innerHTML = `
-    <div
-      id="user-profile"
-    ></div>
-  `
-
-  const userProfileComponent = document.querySelector<HTMLDivElement>('#user-profile')!;
-
-  const clerk = new Clerk('pk_[publishable_key]');
-
+  // Initialize Clerk with your Clerk publishable key
+  const clerk = new Clerk('{{pub_key}}');
   await clerk.load();
 
-  clerk.mountUserProfile(userProfileComponent);
+  document.getElementById("app").innerHTML = `
+    <div id="user-profile"></div>
+  `;
 
-  // ...
+  const userProfileDiv =
+    document.getElementById("user-profile");
 
-  clerk.unmountUserProfile(userProfileComponent);
+  clerk.mountUserProfile(userProfileDiv);
   ```
 
-  ```html {17}
+  ```html filename="index.html" {11}
+  <!-- Add a <div id="user-profile"> element to your HTML -->
   <div id="user-profile"></div>
+
   <script>
-    const script = document.createElement('script');
-    script.setAttribute('data-clerk-publishable-key', 'pk_[publishable_key]');
-    script.async = true;
-    script.src = `https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js`;
+    window.addEventListener("load", async function () {
+      await Clerk.load();
 
-    script.addEventListener('load', async function () {
-      await window.Clerk.load();
+      const userProfileDiv =
+        document.getElementById('user-profile');
 
-      const userProfileComponent = document.querySelector('#user-profile');
-
-      window.Clerk.mountUserProfile(userProfileComponent);
-
-      // ...
-
-      window.Clerk.unmountUserProfile(userProfileComponent);
+      Clerk.mountUserProfile(userProfileDiv);
     });
-    document.body.appendChild(script);
   </script>
   ```
 </CodeBlockTabs>
 
-### Properties
+</InjectKeys>
+
+## `unmountUserProfile()`
+
+Unmount and run cleanup on an existing `<UserProfile />` component instance.
 
 ```typescript
 function unmountUserProfile(node: HTMLDivElement): void;
 ```
 
+### `unmountUserProfile()` params
+
 | Name | Type | Description |
 | --- | --- | --- |
-| `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The container `<div>` element with a rendered [`<UserProfile />`][userprofile-ref] component instance. |
+| `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The container `<div>` element with a rendered `<UserProfile />` component instance. |
 
-## `openUserProfile()`
+### `unmountUserProfile()` usage
 
-Opens the [`<UserProfile />`][userprofile-ref] component as an overlay at the root of your HTML `body` element.
+<InjectKeys>
 
-### Usage
-
-<CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
-  ```typescript {7-11}
+<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
+  ```js filename="main.js" {18}
   import Clerk from '@clerk/clerk-js';
-  import { dark } from "@clerk/themes";
 
-  const clerk = new Clerk('pk_[publishable_key]');
+  // Initialize Clerk with your Clerk publishable key
+  const clerk = new Clerk('{{pub_key}}');
   await clerk.load();
 
-  clerk.openUserProfile({
-    appearance: {
-      baseTheme: dark
-    }
-  });
+  document.getElementById('app').innerHTML = `
+    <div id="user-profile"></div>
+  `
+
+  const userProfileDiv =
+    document.getElementById('user-profile');
+
+  clerk.mountUserProfile(userProfileDiv);
+
+  // ...
+
+  clerk.unmountUserProfile(userProfileDiv);
   ```
 
-  ```html {10-14}
+  ```html filename="index.html" {15}
+  <!-- Add a <div id="user-profile"> element to your HTML -->
+  <div id="user-profile"></div>
+
   <script>
-    const script = document.createElement('script');
-    script.setAttribute('data-clerk-publishable-key', 'pk_[publishable_key]');
-    script.async = true;
-    script.src = `https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js`;
+    window.addEventListener("load", async function () {
+      await Clerk.load();
 
-    script.addEventListener('load', async function () {
-      await window.Clerk.load();
+      const userProfileDiv =
+        document.getElementById('user-profile');
 
-      window.Clerk.openUserProfile({
-        appearance: {
-          baseTheme: dark
-        }
-      });
+      Clerk.mountUserProfile(userProfileDiv);
+
+      // ...
+
+      Clerk.unmountUserProfile(userProfileDiv);
     });
-    document.body.appendChild(script);
   </script>
   ```
 </CodeBlockTabs>
 
-### Properties
+</InjectKeys>
+
+## `openUserProfile()`
+
+Opens the `<UserProfile />` component as an overlay at the root of your HTML `body` element.
 
 ```typescript
 function openUserProfile(props?: UserProfileProps): void;
 ```
 
+### `openUserProfile()` params
+
 | Name | Type | Description |
 | --- | --- | --- |
-| `props?` | [`UserProfileProps`](#user-profile-props) | The properties to pass to the [`<UserProfile />`][userprofile-ref] component |
+| `props?` | [`UserProfileProps`](#user-profile-props) | The properties to pass to the `<UserProfile />` component |
+
+### `openUserProfile()` usage
+
+<InjectKeys>
+
+<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
+  ```js filename="main.js" {14}
+  import Clerk from '@clerk/clerk-js';
+
+  // Initialize Clerk with your Clerk publishable key
+  const clerk = new Clerk('{{pub_key}}');
+  await clerk.load();
+
+  document.getElementById('app').innerHTML = `
+    <div id="user-profile"></div>
+  `
+
+  const userProfileDiv =
+    document.getElementById('user-profile');
+
+  clerk.openUserProfile(userProfileDiv);
+  ```
+
+  ```html filename="index.html" {11}
+  <!-- Add a <div id="user-profile"> element to your HTML -->
+  <div id="user-profile"></div>
+
+  <script>
+    window.addEventListener("load", async function () {
+      await Clerk.load();
+
+      const userProfileDiv =
+        document.getElementById('user-profile');
+
+      Clerk.openUserProfile(userProfileDiv);
+    });
+  </script>
+  ```
+</CodeBlockTabs>
+
+</InjectKeys>
 
 ## `closeUserProfile()`
 
 Closes the user profile overlay.
 
-### Usage
-
-<CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
-  ```typescript {11}
-  import Clerk from '@clerk/clerk-js';
-  import { dark } from "@clerk/themes";
-
-  const clerk = new Clerk('pk_[publishable_key]');
-  await clerk.load();
-
-  clerk.openUserProfile();
-
-  // ...
-
-  clerk.closeUserProfile();
-  ```
-
-  ```html {14}
-  <script>
-    const script = document.createElement('script');
-    script.setAttribute('data-clerk-publishable-key', 'pk_[publishable_key]');
-    script.async = true;
-    script.src = `https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js`;
-
-    script.addEventListener('load', async function () {
-      await window.Clerk.load();
-
-      window.Clerk.openUserProfile();
-
-      // ...
-
-      window.Clerk.closeUserProfile();
-    });
-    document.body.appendChild(script);
-  </script>
-  ```
-</CodeBlockTabs>
-
-### Properties
-
 ```typescript
 function closeUserProfile(): void;
 ```
 
-## Custom pages
+### `closeUserProfile()` usage
 
-You can add customized pages for the [`<UserProfile />`][userprofile-ref] component by using the `customPages` prop.
+<InjectKeys>
 
-<CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
-```typescript {11}
-import Clerk from '@clerk/clerk-js';
+<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
+  ```js filename="main.js" {14}
+  import Clerk from '@clerk/clerk-js';
 
-const clerk = new Clerk('pk_[publishable_key]');
-await clerk.load();
+  // Initialize Clerk with your Clerk publishable key
+  const clerk = new Clerk('{{pub_key}}');
+  await clerk.load();
 
-clerk.openUserProfile({
-    customPages: [
-        {
-            url: "custom-page",
-            label: "Custom Page",
-            mountIcon: (el) => {
-                el.innerHTML = "👋";
-            },
-            unmountIcon: (el) => {
-                el.innerHTML = "";
-            },
-            mount: (el) => {
-                el.innerHTML = `
-                      <h1><b>Custom Page</b></h1>
-                      <p>This is the content of the custom page.</p>
-                      `;
-            },
-            unmount: (el) => {
-                el.innerHTML = "";
-            },
-        },
-        {
-            url: "/other-page",
-            label: "Other Page",
-            mountIcon: (el) => {
-                el.innerHTML = "🌐";
-            },
-            unmountIcon: (el) => {
-                el.innerHTML = "";
-            },
-        }
-    ]
-});
+  document.getElementById('app').innerHTML = `
+    <div id="user-profile"></div>
+  `
 
-```
+  const userProfileDiv =
+    document.getElementById('user-profile');
 
-```html {14}
-<script>
-    const script = document.createElement('script');
-    script.setAttribute('data-clerk-publishable-key', 'pk_[publishable_key]');
-    script.async = true;
-    script.src = `https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js`;
+  clerk.closeUserProfile(userProfileDiv);
+  ```
 
-    script.addEventListener('load', async function () {
-        await window.Clerk.load();
+  ```html filename="index.html" {11}
+  <!-- Add a <div id="user-profile"> element to your HTML -->
+  <div id="user-profile"></div>
 
-        window.Clerk.openUserProfile({
-            customPages: [
-                {
-                    url: "custom-page",
-                    label: "Custom Page",
-                    mountIcon: (el) => {
-                        el.innerHTML = "👋";
-                    },
-                    unmountIcon: (el) => {
-                        el.innerHTML = "";
-                    },
-                    mount: (el) => {
-                    el.innerHTML = `
-                          <h1><b>Custom Page</b></h1>
-                          <p>This is the content of the custom page.</p>
-                          `;
-                    },
-                    unmount: (el) => {
-                        el.innerHTML = "";
-                    },
-                },
-                {
-                    url: "/other-page",
-                    label: "Other Page",
-                    mountIcon: (el) => {
-                        el.innerHTML = "🌐";
-                    },
-                    unmountIcon: (el) => {
-                        el.innerHTML = "";
-                    },
-                }
-            ]
-        });
+  <script>
+    window.addEventListener("load", async function () {
+      await Clerk.load();
 
+      const userProfileDiv =
+        document.getElementById('user-profile');
+
+      Clerk.closeUserProfile(userProfileDiv);
     });
-    document.body.appendChild(script);
-</script>
-```
+  </script>
+  ```
 </CodeBlockTabs>
 
-## `UserProfileProps`
+</InjectKeys>
+
+#### `UserProfileProps`
 
 All props below are optional.
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `appearance` | <code>[Appearance](/docs/components/customization/overview) \| undefined</code> | Optional object to style your components. Will only affect [Clerk Components][components-ref] and not [Account Portal][ap-ref] pages. |
+| `appearance` | <code>[Appearance](/docs/components/customization/overview) \| undefined</code> | Optional object to style your components. Will only affect [Clerk Components](/docs/components/overview) and not [Account Portal](/docs/account-portal/overview) pages. |
 | `routing` | `'hash' \| 'path' \| 'virtual'` | The routing strategy for your pages. |
 | `path` | `string` | The path where the component is mounted when path-based routing is used.<br/>e.g. `/user-profile`.<br />This prop is ignored in hash-based routing. |
 | `additionalOAuthScopes` | `object` | Specify additional scopes per OAuth provider that your users would like to provide if not already approved.<br/>e.g. `{google: ['foo', 'bar'], github: ['qux']}` |
-| `customPages` | <code>[CustomPage][custompage-ref]\[\]</code> | An array of custom pages to add to the user profile. |
+| `customPages` | [`CustomPage`](/docs/references/javascript/types/custom-page) | An array of custom pages to add to the user profile. |
 
-[userprofile-ref]: /docs/components/user/user-profile
-[components-ref]: /docs/components/overview
-[ap-ref]: /docs/account-portal/overview
-[custompage-ref]: /docs/references/javascript/types/custom-page
+## How to customize the `<UserProfile />` component
+
+To learn about how to customize Clerk components, see the [customization documentation](/docs/components/customization/overview).
+
+In addition, you also can add custom pages and links to the navigation sidebar of the `<UserProfile />` component. See the example below:
+
+<InjectKeys>
+
+<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
+```javascript filename="main.js"
+import Clerk from '@clerk/clerk-js';
+
+const clerk = new Clerk('{{pub_key}}');
+await clerk.load();
+
+clerk.openUserProfile({
+  customPages: [
+    {
+      url: "custom-page",
+      label: "Custom Page",
+      mountIcon: (el) => {
+        el.innerHTML = "👋";
+      },
+      unmountIcon: (el) => {
+        el.innerHTML = "";
+      },
+      mount: (el) => {
+        el.innerHTML = `
+          <h1>Custom Page</h1>
+          <p>This is the content of the custom page.</p>
+        `;
+      },
+      unmount: (el) => {
+        el.innerHTML = "";
+      },
+  },
+  {
+      url: "/homepage",
+      label: "Homepage",
+      mountIcon: (el) => {
+        el.innerHTML = "🌐";
+      },
+      unmountIcon: (el) => {
+        el.innerHTML = "";
+      },
+    }
+  ]
+});
+
+```
+
+```html filename="index.html"
+<script>
+  window.addEventListener('load', async function () {
+    await Clerk.load();
+
+    window.Clerk.openUserProfile({
+      customPages: [
+        {
+          url: "custom-page",
+          label: "Custom Page",
+          mountIcon: (el) => {
+            el.innerHTML = "👋";
+          },
+          unmountIcon: (el) => {
+            el.innerHTML = "";
+          },
+          mount: (el) => {
+            el.innerHTML = `
+              <h1><b>Custom Page</b></h1>
+              <p>This is the content of the custom page.</p>
+            `;
+          },
+          unmount: (el) => {
+            el.innerHTML = "";
+          },
+      },
+      {
+          url: "/other-page",
+          label: "Other Page",
+          mountIcon: (el) => {
+            el.innerHTML = "🌐";
+          },
+          unmountIcon: (el) => {
+            el.innerHTML = "";
+          },
+        }
+      ]
+    });
+  });
+  document.body.appendChild(script);
+</script>
+```
+</CodeBlockTabs>
+
+</InjectKeys>
