update orgprofile and orgswitcher reference pages

--- a/docs/references/javascript/clerk/organization-profile.mdx
+++ b/docs/references/javascript/clerk/organization-profile.mdx
@@ -1,19 +1,19 @@
 ---
 title: JavaScript <OrganizationProfile />
-description: This JavaScript reference describes the properties and methods related to Clerk's <UserButton /> component.
+description: This JavaScript reference describes the properties and methods related to Clerk's <OrganizationProfile /> component.
 ---
 
 # JavaScript `<OrganizationProfile />`
 
 <Callout type="warning">
-  This JavaScript reference describes the properties and methods related to Clerk's `<OrganizationProfile />` component. If you are looking for the React component, see the [`<OrganizationProfile />`](/docs/components/user/user-button) documentation.
+  This JavaScript reference describes the properties and methods related to Clerk's `<OrganizationProfile />` component. If you are looking for the React component, see the [`<OrganizationProfile />`](/docs/components/organization/organization-profile) documentation.
 </Callout>
 
 <Images alt="Organization Profile Example" width={1024} height={548} src="/docs/images/ui-components/component-org_profile.svg" />
 
-The [`<OrganizationProfile />`](/docs/components/user/user-button) component is used to render a beautiful, full-featured organization management UI that allows users to manage their organization profile and security settings.
+The [`<OrganizationProfile />`](/docs/components/organization/organization-profile) component is used to render a beautiful, full-featured organization management UI that allows users to manage their organization profile and security settings.
 
-The following methods available on an instance of the [`Clerk`](/docs/references/javascript/clerk/clerk) class are used to render and control the `<UserButton />` component:
+The following methods available on an instance of the [`Clerk`](/docs/references/javascript/clerk/clerk) class are used to render and control the `<OrganizationProfile />` component:
 
 - [`mountOrganizationProfile()`](#mount-organization-profile)
 - [`unmountOrganizationProfile()`](#unmount-organization-profile)
@@ -251,7 +251,7 @@ All props below are optional.
 | --- | --- | --- |
 | `afterLeaveOrganizationUrl` | `string` | Full URL or path to navigate after leaving an organization. |
 | `routing` | `'hash' \| 'path' \| 'virtual'` | The routing strategy for your pages. |
-| `path` | `string` | The path where the component is mounted when path-based routing is used.<br/>e.g. `/organization-profile`.<br />This prop is ignored in hash-based routing. |
+| `path` | `string` | The path where the component is mounted when path-based routing is used.<br/>For example: `/organization-profile`.<br />This prop is ignored in hash-based routing. |
 | `appearance` | [`Appearance`](/docs/components/customization/overview) | Optional object to style your components. Will only affect [Clerk Components](/docs/components/overview) and not [Account Portal](/docs/account-portal/overview) pages. |
 | `customPages` | [`CustomPage[]`](/docs/references/javascript/types/custom-page) | An array of custom pages to add to the organization profile. |
 
@@ -264,7 +264,7 @@ In addition, you also can add custom pages and links to the navigation sidebar o
 <InjectKeys>
 
 <CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
-  ```typescript {11}
+  ```js filename="main.js"
   import Clerk from '@clerk/clerk-js';
 
   const clerk = new Clerk('{{pub_key}}');
@@ -305,7 +305,7 @@ In addition, you also can add custom pages and links to the navigation sidebar o
   });
   ```
 
-  ```html {14}
+  ```html filename="index.html"
   <script>
     window.addEventListener('load', async function () {
       await Clerk.load();
@@ -316,29 +316,29 @@ In addition, you also can add custom pages and links to the navigation sidebar o
             url: "custom-page",
             label: "Custom Page",
             mountIcon: (el) => {
-                el.innerHTML = "👋";
+              el.innerHTML = "👋";
             },
             unmountIcon: (el) => {
-                el.innerHTML = "";
+              el.innerHTML = "";
             },
             mount: (el) => {
-                el.innerHTML = `
-                      <h1><b>Custom Page</b></h1>
-                      <p>This is the content of the custom page.</p>
-                      `;
+              el.innerHTML = `
+                <h1><b>Custom Page</b></h1>
+                <p>This is the content of the custom page.</p>
+              `;
             },
             unmount: (el) => {
-                el.innerHTML = "";
+              el.innerHTML = "";
             },
           },
           {
             url: "/other-page",
             label: "Other Page",
             mountIcon: (el) => {
-                el.innerHTML = "🌐";
+              el.innerHTML = "🌐";
             },
             unmountIcon: (el) => {
-                el.innerHTML = "";
+              el.innerHTML = "";
             },
           }
         ]
