--- a/docs/references/javascript/clerk/organization-switcher.mdx
+++ b/docs/references/javascript/clerk/organization-switcher.mdx
@@ -1,140 +1,141 @@
 ---
-title: <OrganizationSwitcher /> component
-description: The <OrganizationSwitcher /> component is used to enable the ability to switch between available organizations the user may be part of in your application.
+title: JavaScript <OrganizationSwitcher />
+description: This JavaScript reference describes the properties and methods related to Clerk's <OrganizationSwitcher /> component.
 ---
 
-# `<OrganizationSwitcher />` component
+# JavaScript `<OrganizationSwitcher />`
+
+<Callout type="warning">
+  This JavaScript reference describes the properties and methods related to Clerk's `<OrganizationSwitcher />` component. If you are looking for the React component, see the [`<OrganizationSwitcher />`](/docs/components/organization/organization-switcher) documentation.
+</Callout>
 
 <Images alt="Organization Switcher Example" width={992} height={568} src="/docs/images/ui-components/component-org_switcher.svg" />
 
-The [`<OrganizationSwitcher />`][orgswitcher-ref] component is used to enable the ability to switch between available organizations the user may be part of in your application.
+The [`<OrganizationSwitcher />`](/docs/components/organization/organization-switcher) component is used to enable the ability to switch between available organizations the user may be part of in your application.
+
+The following methods available on an instance of the [`Clerk`](/docs/references/javascript/clerk/clerk) class are used to render and control the `<OrganizationSwitcher />` component:
+
+- [`mountOrganizationSwitcher()`](#mount-organization-switcher)
+- [`unmountOrganizationSwitcher()`](#unmount-organization-switcher)
 
 ## `mountOrganizationSwitcher()`
 
-Render the [`<OrganizationSwitcher />`][orgswitcher-ref] component to an HTML `<div>` element.
-
-### Usage
-
-<CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
-  ```typescript {15-19}
-  import Clerk from '@clerk/clerk-js';
-  import { dark } from "@clerk/themes";
-
-  document.querySelector<HTMLDivElement>('#app')!.innerHTML = `
-    <div
-      id="organization-switcher"
-    ></div>
-  `;
-
-  const organizationSwitcherComponent = document.querySelector<HTMLDivElement>('#organization-switcher')!;
-
-  const clerk = new Clerk('pk_[publishable_key]');
-  await clerk.load();
-
-  clerk.mountOrganizationSwitcher(organizationSwitcherComponent, {
-    appearance: {
-      baseTheme: dark
-    }
-  });
-  ```
-
-  ```html {13-17}
-  <div id="organization-switcher"></div>
-  <script>
-    const script = document.createElement('script');
-    script.setAttribute('data-clerk-publishable-key', 'pk_[publishable_key]');
-    script.async = true;
-    script.src = `https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js`;
-
-    script.addEventListener('load', async function () {
-      await window.Clerk.load();
-
-      const organizationSwitcherComponent = document.querySelector('#organization-switcher');
-
-      window.Clerk.mountOrganizationSwitcher(organizationSwitcherComponent, {
-        appearance: {
-          baseTheme: dark
-        }
-      });
-    });
-    document.body.appendChild(script);
-  </script>
-  ```
-</CodeBlockTabs>
-
-### Properties
+Render the `<OrganizationSwitcher />` component to an HTML `<div>` element.
 
 ```typescript
 function mountOrganizationSwitcher(node: HTMLDivElement, props?: OrganizationSwitcherProps): void;
 ```
 
+### `mountOrganizationSwitcher()` params
+
 | Name | Type | Description |
 | --- | --- | --- |
-| `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The `<div>` element used to render in the [`<OrganizationSwitcher />`][orgswitcher-ref] component |
-| `props?` | [`OrganizationSwitcherProps`](#organization-switcher-props) | The properties to pass to the [`<OrganizationSwitcher />`][orgswitcher-ref] component |
+| `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The `<div>` element used to render in the `<OrganizationSwitcher />` component |
+| `props?` | [`OrganizationSwitcherProps`](#organization-switcher-props) | The properties to pass to the `<OrganizationSwitcher />` component |
 
-## `unmountOrganizationSwitcher()`
+### `mountOrganizationSwitcher()` usage
 
-Unmount and run cleanup on an existing [`<OrganizationSwitcher />`][orgswitcher-ref] component instance.
+<InjectKeys>
 
-### Usage
-
-<CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
-  ```typescript {19}
+<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
+  ```js filename="main.js" {14}
   import Clerk from '@clerk/clerk-js';
 
-  document.querySelector<HTMLDivElement>('#app')!.innerHTML = `
-    <div
-      id="organization-switcher"
-    ></div>
-  `
-
-  const organizationSwitcherComponent = document.querySelector<HTMLDivElement>('#organization-switcher')!;
-
-  const clerk = new Clerk('pk_[publishable_key]');
-
+  // Initialize Clerk with your Clerk publishable key
+  const clerk = new Clerk('{{pub_key}}');
   await clerk.load();
 
-  clerk.mountOrganizationSwitcher(organizationSwitcherComponent);
+  document.getElementById("app").innerHTML = `
+    <div id="organization-switcher"></div>
+  `;
 
-  // ...
+  const orgSwitcherDiv =
+    document.getElementById("organization-switcher");
 
-  clerk.unmountOrganizationSwitcher(organizationSwitcherComponent);
+  clerk.mountOrganizationSwitcher(orgSwitcherDiv);
   ```
 
-  ```html {17}
+  ```html filename="index.html" {11}
+  <!-- Add a <div id="organization-switcher"> element to your HTML -->
   <div id="organization-switcher"></div>
+
   <script>
-    const script = document.createElement('script');
-    script.setAttribute('data-clerk-publishable-key', 'pk_[publishable_key]');
-    script.async = true;
-    script.src = `https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js`;
+    window.addEventListener("load", async function () {
+      await Clerk.load();
 
-    script.addEventListener('load', async function () {
-      await window.Clerk.load();
+      const orgSwitcherDiv =
+        document.getElementById('organization-switcher');
 
-      const organizationSwitcherComponent = document.querySelector('#organization-switcher');
-
-      window.Clerk.mountOrganizationSwitcher(organizationSwitcherComponent);
-
-      // ...
-
-      window.Clerk.unmountOrganizationSwitcher(organizationSwitcherComponent);
+      Clerk.mountOrganizationSwitcher(orgSwitcherDiv);
     });
-    document.body.appendChild(script);
   </script>
   ```
 </CodeBlockTabs>
 
-### Properties
+</InjectKeys>
+
+## `unmountOrganizationSwitcher()`
+
+Unmount and run cleanup on an existing `<OrganizationSwitcher />` component instance.
 
 ```typescript
 function unmountOrganizationSwitcher(node: HTMLDivElement): void;
 ```
 
+### `unmountOrganizationSwitcher()` params
+
 | Name | Type | Description |
 | --- | --- | --- |
-| `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The container `<div>` element with a rendered [`<OrganizationSwitcher />`][orgswitcher-ref] component instance |
+| `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The container `<div>` element with a rendered `<OrganizationSwitcher />` component instance |
+
+### `unmountOrganizationSwitcher()` usage
+
+<InjectKeys>
+
+<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
+  ```js filename="main.js" {18}
+  import Clerk from '@clerk/clerk-js';
+
+  // Initialize Clerk with your Clerk publishable key
+  const clerk = new Clerk('{{pub_key}}');
+  await clerk.load();
+
+  document.getElementById('app').innerHTML = `
+    <div id="organization-switcher"></div>
+  `
+
+  const orgSwitcherDiv =
+    document.getElementById('organization-switcher');
+
+  clerk.mountOrganizationSwitcher(orgSwitcherDiv);
+
+  // ...
+
+  clerk.unmountOrganizationSwitcher(orgSwitcherDiv);
+  ```
+
+  ```html filename="index.html" {15}
+  <!-- Add a <div id="organization-switcher"> element to your HTML -->
+  <div id="organization-switcher"></div>
+
+  <script>
+    window.addEventListener("load", async function () {
+      await Clerk.load();
+
+      const orgSwitcherDiv =
+        document.getElementById('organization-switcher');
+
+      Clerk.mountOrganizationSwitcher(orgSwitcherDiv);
+
+      // ...
+
+      Clerk.unmountOrganizationSwitcher(orgSwitcherDiv);
+    });
+  </script>
+  ```
+</CodeBlockTabs>
+
+</InjectKeys>
 
 ## `OrganizationSwitcherProps`
 
@@ -143,16 +144,16 @@ All props below are optional.
 | Name | Type | Description |
 | --- | --- | --- |
 | `afterCreateOrganizationUrl` | `string` | Full URL or path to navigate after creating a new organization. |
-| `appearance` | <code>[Appearance](/docs/components/customization/overview) \| undefined</code> | Optional object to style your components. Will only affect [Clerk Components][components-ref] and not [Account Portal][ap-ref] pages. |
+| `appearance` | [`Appearance`](/docs/components/customization/overview) | Optional object to style your components. Will only affect [Clerk Components](/docs/components/overview) and not [Account Portal](/docs/account-portal/overview) pages. |
 | `createOrganizationUrl` | `string` | Full URL or path where the [`<CreateOrganization />`][createorg-ref]component is mounted. |
 | `organizationProfileUrl` | `string` | Full URL or path where the [`<OrganizationProfile />`][orgprofile-ref] component is mounted. |
 | `createOrganizationMode` | `'modal' \| 'navigation'` | Controls whether clicking the **Create organization** button will cause the [`<CreateOrganization />`][createorg-ref] component to open as a modal, or if the browser will navigate to the `createOrganizationUrl` where [`<CreateOrganization />`][createorg-ref] is mounted as a page. <br />Defaults to: `'modal'` |
 | `organizationProfileMode` | `'modal' \| 'navigation'` | Controls whether clicking the **Manage organization** button will cause the [`<OrganizationProfile />`][orgprofile-ref] component to open as a modal, or if the browser will navigate to the `organizationProfileUrl` where [`<OrganizationProfile />`][orgprofile-ref] is mounted as a page. <br />Defaults to: `'modal'` |
 | `afterLeaveOrganizationUrl` | `string` | Full URL or path to navigate to after the user leaves the currently active organization. |
 | `afterSwitchOrganizationUrl` | `string` | Full URL or path to navigate after a successful organization switch. |
-| `hidePersonal` | `boolean` | By default, users can switch between organization and their personal account. This option controls whether [`<OrganizationSwitcher />`][orgswitcher-ref] will include the user's personal account in the organization list. Setting this to `false` will hide the personal account entry, and users will only be able to switch between organizations. <br />Defaults to: `true` |
-| `defaultOpen` | `boolean` | Controls the default state of the [`<OrganizationSwitcher />`][orgswitcher-ref] component. |
-| `organizationProfileProps` | `object` | Specify options for the underlying [`<OrganizationProfile />`][orgprofile-ref] component.<br />e.g. `{appearance: {...}}` |
+| `hidePersonal` | `boolean` | By default, users can switch between organization and their personal account. This option controls whether `<OrganizationSwitcher />` will include the user's personal account in the organization list. Setting this to `false` will hide the personal account entry, and users will only be able to switch between organizations. <br />Defaults to: `true` |
+| `defaultOpen` | `boolean` | Controls the default state of the `<OrganizationSwitcher />` component. |
+| `organizationProfileProps` | `object` | Specify options for the underlying [`<OrganizationProfile />`][orgprofile-ref] component.<br />For example: `{appearance: {...}}` |
 
 [components-ref]: /docs/components/overview
 [ap-ref]: /docs/account-portal/overview
