--- a/docs/references/javascript/clerk/sign-in.mdx
+++ b/docs/references/javascript/clerk/sign-in.mdx
@@ -6,7 +6,8 @@ description: This JavaScript reference describes the properties and methods rela
 # JavaScript `<SignIn />`
 
 <Callout type="warning">
-  This JavaScript reference describes the properties and methods related to Clerk's `<SignIn />` component. If you are looking for the React component, see the [`<SignIn />`](/docs/components/authentication/sign-in) documentation.
+  This reference describes the properties and methods related to using Clerk's `<SignIn />` component in JavaScript. To use it with frameworks such as Next.js or Expo, see [the component reference](/docs/components/authentication/sign-in).
+
 </Callout>
 
 <Images width={496} height={564} src="/docs/images/ui-components/component-sign_in.svg" alt="Sign in component example" />
