code review suggestions

--- a/docs/references/javascript/clerk/sign-in.mdx
+++ b/docs/references/javascript/clerk/sign-in.mdx
@@ -1,5 +1,5 @@
 ---
-title: JavaScript <SignIn />
+title: SignIn Component - JavaScript SDK
 description: This JavaScript reference describes the properties and methods related to Clerk's <SignIn /> component.
 ---
 
@@ -12,7 +12,7 @@ description: This JavaScript reference describes the properties and methods rela
 
 <Images width={496} height={564} src="/docs/images/ui-components/component-sign_in.svg" alt="Sign in component example" />
 
-The [`<SignIn />`](/docs/components/authentication/sign-in) component renders a UI for signing in users. The functionality of the `<SignIn />` component are controlled by the instance settings you specify in your [Clerk Dashboard](https://dashboard.clerk.com), such as [sign-up options](/docs/authentication/configuration/sign-up-options) and [social connections](/docs/authentication/social-connections/overview). You can further customize your `<SignIn />` component by passing additional properties at the time of rendering.
+The [`<SignIn />`](/docs/components/authentication/sign-in) component renders a UI for signing in users. The functionality of the `<SignIn />` component are controlled by the instance settings you specify in your [Clerk Dashboard](https://dashboard.clerk.com), such as [sign-up options](/docs/authentication/configuration/sign-up-options) and [social connections](/docs/authentication/social-connections/overview). You can further customize your `<SignIn />` component by passing additional [properties](#sign-in-props) at the time of rendering.
 
 The following methods available on an instance of the [`Clerk`](/docs/references/javascript/clerk/clerk) class are used to render and control the `<SignIn />` component:
 
@@ -230,12 +230,12 @@ function closeSignIn(): void;
 
 ## `SignInProps`
 
-The type of the `props` parameter in the `openSignIn()` method is defined as follows:
+All props below are optional.
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `routing` | `'hash' \| 'path' \| 'virtual'` | The routing strategy for your pages. Defaults to `'path'`. |
-| `path` | `string` | The path where the component is mounted on when path-based routing is used.<br />For example, `/sign-in`<br />This prop is ignored in hash- and virtual-based routing. |
+| `routing` | `'hash' \| 'path' \| 'virtual'` | The routing strategy for your pages.<br />Note: If you are using environment variables for Next.js or Remix to specify your routes, such as `NEXT_PUBLIC_CLERK_SIGN_IN_URL`, this will be set to `path`. |
+| `path` | `string` | The path where the component is mounted on when path-based routing is used.<br />For example: `/sign-in`<br />This prop is ignored in hash- and virtual-based routing. |
 | `redirectUrl` | `string` | Full URL or path to navigate after successful sign in or sign up.<br />The same as setting `afterSignInUrl` and `afterSignUpUrl` to the same value. |
 | `afterSignInUrl` | `string` | The full URL or path to navigate after a successful sign in. Defaults to `/`. |
 | `signUpUrl` | `string` | Full URL or path to the sign up page. Use this property to provide the target of the 'Sign Up' link that's rendered. |
