--- a/docs/components/authentication/sign-in.mdx
+++ b/docs/components/authentication/sign-in.mdx
@@ -1,9 +1,9 @@
 ---
-title: <SignIn />
-description: The <SignIn /> component renders a UI for signing in users.
+title: <SignIn /> component
+description: Clerk's <SignIn /> component renders a UI for signing in users.
 ---
 
-# `<SignIn />`
+# `<SignIn />` component
 
 <Images
   width={496}
@@ -12,11 +12,11 @@ description: The <SignIn /> component renders a UI for signing in users.
   alt="Sign in component example"
 />
 
-The `<SignIn />` component renders a UI for signing in users. The functionality of the `<SignIn />` component is controlled by the instance settings you specify in your [Clerk Dashboard](https://dashboard.clerk.com). You can further customize your `<SignIn />` component by passing additional properties at the time of rendering.
+The `<SignIn />` component renders a UI for signing in users. The functionality of the `<SignIn />` component is controlled by the instance settings you specify in your [Clerk Dashboard](https://dashboard.clerk.com), such as [sign-up options](/docs/authentication/configuration/sign-up-options) and [social connections](/docs/authentication/social-connections/overview). You can further customize your `<SignIn />` component by passing additional [properties](#properties) at the time of rendering.
 
 ## Usage
 
-Below is basic implementation of the `<SignIn />` component. You can use this as a starting point for your own implementation.
+The following example includes basic implementation of the `<SignIn />` component. You can use this as a starting point for your own implementation.
 
 <Tabs type="framework" items={["Next.js", "React", "Remix", "Gatsby", "JavaScript"]}>
   <Tab>
@@ -86,48 +86,7 @@ Below is basic implementation of the `<SignIn />` component. You can use this as
   </Tab>
 
   <Tab>
-    In the example below, the [`mountSignIn()`](/docs/references/javascript/clerk/sign-in#mount-sign-in) method is used to render the `<SignIn />` component to a `<div>` element with `id="sign-in"`.
-
-    To learn more about the methods available for rendering and controlling the `<SignIn />` component in a JavaScript application, see the [JavaScript reference docs](/docs/references/javascript/clerk/sign-in).
-
-    <InjectKeys>
-
-    <CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
-      ```js filename="index.js" {14}
-      import Clerk from '@clerk/clerk-js';
-
-      // Initialize Clerk with your Clerk publishable key
-      const clerk = new Clerk('{{pub_key}}');
-      await clerk.load();
-
-      document.getElementById("app").innerHTML = `
-        <div id="sign-in"></div>
-      `;
-
-      const signInDiv =
-        document.getElementById("sign-in");
-
-      clerk.mountSignIn(signInDiv);
-      ```
-
-      ```html filename="index.html" {10}
-      <!-- Add a <div id="sign-in"> element to your HTML -->
-      <div id="sign-in"></div>
-
-      <script>
-        window.addEventListener("load", async function () {
-          await Clerk.load();
-
-          const signInDiv =
-            document.getElementById('sign-in');
-
-          Clerk.mountSignIn(signInDiv);
-        });
-      </script>
-      ```
-    </CodeBlockTabs>
-
-    </InjectKeys>
+    To learn about the methods available for rendering and controlling the `<SignIn />` component in a JavaScript application, see the [JavaScript reference docs](/docs/references/javascript/clerk/sign-in).
   </Tab>
 </Tabs>
 
@@ -137,7 +96,7 @@ All props below are optional.
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `appearance` | <code>[Appearance](/docs/components/customization/overview) \| undefined</code> | Optional object to style your components. Will only affect [Clerk Components][components-ref] and not [Account Portal][ap-ref] pages. |
+| `appearance` | <code>[Appearance](/docs/components/customization/overview) \| undefined</code> | Optional object to style your components. Will only affect [Clerk Components](/docs/components/overview) and not [Account Portal](/docs/account-portal/overview) pages. |
 | `routing` | `'hash' \| 'path' \| 'virtual'` | The routing strategy for your pages.<br />Note: If you are using environment variables for Next.js or Remix to specify your routes, this will be set to `path`. |
 | `path` | `string` | The path where the component is mounted on when path-based routing is used e.g. /sign-in. |
 | `redirectUrl` | `string` | Full URL or path to navigate after successful sign in or sign up.<br /> The same as setting `afterSignInUrl` and `afterSignUpUrl` to the same value. |
@@ -149,6 +108,3 @@ All props below are optional.
 ## Customization
 
 To learn about how to customize Clerk components, see the [customization documentation](/docs/components/customization/overview).
-
-[components-ref]: /docs/components/overview
-[ap-ref]: /docs/account-portal/overview
