--- a/docs/components/authentication/sign-up.mdx
+++ b/docs/components/authentication/sign-up.mdx
@@ -1,6 +1,6 @@
 ---
-title: <SignUp />
-description: The <SignUp /> component renders a UI for signing up users.
+title: <SignUp /> component
+description: Clerk's <SignUp /> component renders a UI for signing up users.
 ---
 
 # `<SignUp />`
@@ -12,17 +12,15 @@ description: The <SignUp /> component renders a UI for signing up users.
   alt="Sign up component example"
 />
 
-The `<SignUp />` component renders a UI for signing up users. The functionality of the `<SignUp />` component is controlled by the instance settings you specify in your [Clerk Dashboard](https://dashboard.clerk.com). You can further customize your `<SignUp />` component by passing additional properties at the time of rendering.
+The `<SignUp />` component renders a UI for signing up users. The functionality of the `<SignUp />` component is controlled by the instance settings you specify in your [Clerk Dashboard](https://dashboard.clerk.com), , such as [sign-up options](/docs/authentication/configuration/sign-up-options) and [social connections](/docs/authentication/social-connections/overview). You can further customize your `<SignUp />` component by passing additional [properties](#properties) at the time of rendering.
 
 ## Usage
 
-Below is basic implementation of the `<SignUp />` component. You can use this as a starting point for your own implementation
+The following example includes basic implementation of the `<SignUp />` component. You can use this as a starting point for your own implementation
 
 <Tabs type="framework" items={["Next.js", "React", "Remix", "Gatsby", "JavaScript"]}>
   <Tab>
     You can embed the `<SignUp />` component using the [Next.js optional catch-all route](https://nextjs.org/docs/pages/building-your-application/routing/dynamic-routes#optional-catch-all-routes). This allows you to redirect the user inside your application. The `<SignUp />` component should be mounted on a public page.
-
-    <Callout>The example below shows the Sign In page mounted on the url /sign-in. For more information on how to implement this, check out the [`<SignIn />` UI page](/docs/components/authentication/sign-in).</Callout>
 
     <CodeBlockTabs type="router" options={["App Router", "Pages Router"]}>
       ```jsx filename="/app/sign-up/[[...sign-up]]/page.tsx"
@@ -62,7 +60,7 @@ Below is basic implementation of the `<SignUp />` component. You can use this as
       return (
         <div style={{ border: "2px solid blue", padding: "2rem" }}>
           <h1>Sign Up route</h1>
-          <SignUp routing={"path"} path={"/sign-up"} />
+          <SignUp routing="path" path="/sign-up" />
         </div>
       );
     }
@@ -77,7 +75,7 @@ Below is basic implementation of the `<SignUp />` component. You can use this as
       return (
         <div style={{ border: "2px solid blue", padding: "2rem" }}>
           <h1>Sign Up route</h1>
-          <SignUp routing={"path"} path={"/sign-up"} />
+          <SignUp routing="path" path="/sign-up" />
         </div>
       );
     }
@@ -85,48 +83,7 @@ Below is basic implementation of the `<SignUp />` component. You can use this as
   </Tab>
 
   <Tab>
-    In the example below, the [`mountSignUp()`](/docs/references/javascript/clerk/sign-up#mount-sign-up) method is used to render the `<SignUp />` component to a `<div>` element with `id="sign-up"`.
-
-    To learn more about the methods available for rendering and controlling the `<SignUp />` component in a JavaScript application, see the [JavaScript reference docs](/docs/references/javascript/clerk/sign-up).
-
-    <InjectKeys>
-
-    <CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
-      ```typescript filename="index.ts" {14}
-      import Clerk from '@clerk/clerk-js';
-
-      // Initialize Clerk with your Clerk publishable key
-      const clerk = new Clerk('{{pub_key}}');
-      await clerk.load();
-
-      document.getElementById("app").innerHTML = `
-        <div id="sign-up"></div>
-      `;
-
-      const signUpDiv =
-        document.getElementById("sign-up");
-
-      clerk.mountSignUp(signUpDiv);
-      ```
-
-      ```html filename="index.js" {11}
-      <!-- Add a <div id="sign-up"> element to your HTML -->
-      <div id="sign-up"></div>
-
-      <script>
-        window.addEventListener("load", async function () {
-          await Clerk.load();
-
-          const signUpDiv =
-            document.getElementById('sign-up');
-
-          Clerk.mountSignUp(signUpDiv);
-        });
-      </script>
-      ```
-    </CodeBlockTabs>
-
-    </InjectKeys>
+    To learn about the methods available for rendering and controlling the `<SignUp />` component in a JavaScript application, see the [JavaScript reference docs](/docs/references/javascript/clerk/sign-up).
   </Tab>
 </Tabs>
 
@@ -136,7 +93,7 @@ All props below are optional.
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `appearance` | <code>[Appearance](/docs/components/customization/overview) \| undefined</code> | Optional object to style your components. Will only affect [Clerk Components][components-ref] and not [Account Portal][ap-ref] pages. |
+| `appearance` | <code>[Appearance](/docs/components/customization/overview) \| undefined</code> | Optional object to style your components. Will only affect [Clerk Components](/docs/components/overview) and not [Account Portal](/docs/account-portal/overview) pages. |
 | `routing` | `'hash' \| 'path' \| 'virtual'` | The routing strategy for your pages.<br />Note: If you are using environment variables for Next.js or Remix to specify your routes, this will be set to `path`. |
 | `path` | `string` | The path where the component is mounted on when path-based routing is used e.g. /sign-up. |
 | `redirectUrl` | `string` | Full URL or path to navigate to after successful sign in or sign up.<br />The same as setting afterSignInUrl and afterSignUpUrl to the same value. |
@@ -149,6 +106,3 @@ All props below are optional.
 ## Customization
 
 To learn about how to customize Clerk components, see the [customization documentation](/docs/components/customization/overview).
-
-[components-ref]: /docs/components/overview
-[ap-ref]: /docs/account-portal/overview
