--- a/docs/references/javascript/clerk/sign-up.mdx
+++ b/docs/references/javascript/clerk/sign-up.mdx
@@ -1,17 +1,17 @@
 ---
-title: JavaScript <SignUp />
+title: JavaScript <SignUp /> component
 description: This JavaScript reference describes the properties and methods related to Clerk's <SignUp /> component.
 ---
 
-# JavaScript `<SignUp />`
+# JavaScript `<SignUp />` component
 
 <Callout type="warning">
-  This JavaScript reference describes the properties and methods related to Clerk's `<SignUp />` component. If you are looking for the React component, see the [`<SignUp />`](/docs/components/authentication/sign-up) documentation.
+  This reference describes the properties and methods related to using Clerk's `<SignUp />` component in JavaScript. To use it with frameworks such as Next.js or Expo, see [the component reference](/docs/components/authentication/sign-up).
 </Callout>
 
 <Images width={496} height={780} src="/docs/images/ui-components/component-sign_up.svg" alt="Sign up component example" />
 
-The [`<SignUp />`](/docs/components/authentication/sign-up) component renders a UI for signing up users. The functionality of the `<SignUp />` component are controlled by the instance settings you specify in your [Clerk Dashboard](https://dashboard.clerk.com), such as [sign-up options](/docs/authentication/configuration/sign-up-options) and [social connections](/docs/authentication/social-connections/overview). You can further customize your `<SignUp />` component by passing additional properties at the time of rendering.
+The [`<SignUp />`](/docs/components/authentication/sign-up) component renders a UI for signing up users. The functionality of the `<SignUp />` component are controlled by the instance settings you specify in your [Clerk Dashboard](https://dashboard.clerk.com), such as [sign-up options](/docs/authentication/configuration/sign-up-options) and [social connections](/docs/authentication/social-connections/overview). You can further customize your `<SignUp />` component by passing additional [properties](#sign-up-props) at the time of rendering.
 
 The following methods available on an instance of the [`Clerk`](/docs/references/javascript/clerk/clerk) class are used to render and control the `<SignUp />` component:
 
@@ -231,8 +231,8 @@ All props below are optional.
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `routing` | `'hash' \| 'path' \| 'virtual'` | The routing strategy for your pages.<br />Note: If you are using environment variables for Next.js or Remix to specify your routes, this will be set to `path`. |
-| `path` | `string` | The path where the component is mounted on when path-based routing is used.<br />`/sign-in`<br />This prop is ignored in hash- and virtual-based routing. |
+| `routing` | `'hash' \| 'path' \| 'virtual'` | The routing strategy for your pages.<br />Note: If you are using environment variables for Next.js or Remix to specify your routes, such as `NEXT_PUBLIC_CLERK_SIGN_IN_URL`, this will be set to `path`. |
+| `path` | `string` | The path where the component is mounted on when path-based routing is used.<br />For example: `/sign-up`<br />This prop is ignored in hash- and virtual-based routing. |
 | `redirectUrl` | `string` | Full URL or path to navigate after successful sign in or sign up.<br /> The same as setting `afterSignInUrl` and `afterSignUpUrl` to the same value. |
 | `afterSignInUrl` | `string` | The full URL or path to navigate after a successful sign in. Defaults to `/`. |
 | `signInUrl` | `string` | Full URL or path to the sign in page. Use this property to provide the target of the 'Sign In' link that's rendered. |
